generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ---------------------------------------------------------------------------
// Enums
// ---------------------------------------------------------------------------

enum WorkspaceRole {
  OWNER
  EDITOR
  VIEWER
}

enum DocumentType {
  FILE
  FOLDER
}

// ---------------------------------------------------------------------------
// Models
// ---------------------------------------------------------------------------

model User {
  id              String    @id @default(cuid())
  email           String    @unique
  emailVerifiedAt DateTime?
  passwordHash    String?
  displayName     String
  avatarUrl       String?
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt

  ownedWorkspaces         Workspace[]              @relation("WorkspaceOwner")
  memberships             WorkspaceMember[]
  sessions                Session[]
  passwordResetTokens     PasswordResetToken[]
  emailVerificationTokens EmailVerificationToken[]
  sentInvites             Invite[]                 @relation("InviteSender")
  documentVersions        DocumentVersion[]        @relation("VersionAuthor")
}

model Workspace {
  id        String   @id @default(cuid())
  name      String
  ownerId   String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  owner     User              @relation("WorkspaceOwner", fields: [ownerId], references: [id])
  documents Document[]
  members   WorkspaceMember[]
  invites   Invite[]
  versions  DocumentVersion[]
}

model WorkspaceMember {
  id          String        @id @default(cuid())
  workspaceId String
  userId      String
  role        WorkspaceRole
  createdAt   DateTime      @default(now())

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([workspaceId, userId])
}

model Invite {
  id          String        @id @default(cuid())
  // SHA-256 hex of the bearer token. The raw token is shown once at creation
  // and never stored; accepts hash the path parameter for lookup.
  tokenHash   String        @unique
  workspaceId String
  invitedById String
  email       String?
  role        WorkspaceRole @default(EDITOR)
  expiresAt   DateTime
  acceptedAt  DateTime?
  createdAt   DateTime      @default(now())

  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  invitedBy User      @relation("InviteSender", fields: [invitedById], references: [id], onDelete: Cascade)

  @@index([workspaceId])
}

model Document {
  id             String       @id @default(cuid())
  workspaceId    String
  parentId       String?
  type           DocumentType
  path           String
  name           String
  language       String?
  content        String?
  // CRDT lineage counter. A version restore replaces the Yjs history with a
  // brand-new lineage and increments this under the document advisory lock.
  // Persistence writes tagged with a different generation are rejected
  // (restore fencing), so a stale replica can never resurrect pre-restore
  // state.
  crdtGeneration Int          @default(0)
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt

  workspace Workspace         @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  parent    Document?         @relation("DocumentTree", fields: [parentId], references: [id], onDelete: Cascade)
  children  Document[]        @relation("DocumentTree")
  updates   DocumentUpdate[]
  snapshots Snapshot[]
  versions  DocumentVersion[]

  @@unique([workspaceId, path])
}

// A point-in-time snapshot of a document's persisted content, captured on
// meaningful saves and on restore.  Unlike DocumentUpdate/Snapshot (which hold
// the Yjs CRDT history), a DocumentVersion stores plain text so it can be
// listed, diffed, and restored independently of the realtime layer.
model DocumentVersion {
  id            String   @id @default(cuid())
  documentId    String
  workspaceId   String
  // Nullable + SetNull so deleting the author never destroys version history.
  createdById   String?
  versionNumber Int
  content       String
  message       String?
  createdAt     DateTime @default(now())

  document  Document  @relation(fields: [documentId], references: [id], onDelete: Cascade)
  workspace Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  createdBy User?     @relation("VersionAuthor", fields: [createdById], references: [id], onDelete: SetNull)

  @@unique([documentId, versionNumber])
  @@index([documentId, versionNumber])
  @@index([documentId, createdAt])
}

model DocumentUpdate {
  id         String   @id @default(cuid())
  documentId String
  update     Bytes
  // The Document.crdtGeneration this update belongs to. Rows from older
  // generations are deleted by restore; the column exists so seq uniqueness
  // and cold loads are always scoped to the current lineage.
  generation Int      @default(0)
  seq        Int
  // Client-generated idempotency key for durable collaboration acks.
  // Null only on rows written before durable acks existed; new writes always
  // set this. Unique per lineage so a resent update cannot double-persist.
  updateId   String?
  createdAt  DateTime @default(now())

  document Document @relation(fields: [documentId], references: [id], onDelete: Cascade)

  @@unique([documentId, generation, seq])
  @@unique([documentId, generation, updateId])
  @@index([documentId, generation, seq])
}

model Snapshot {
  id         String   @id @default(cuid())
  documentId String
  state      Bytes
  // The Document.crdtGeneration this snapshot belongs to (see DocumentUpdate).
  generation Int      @default(0)
  seq        Int
  createdAt  DateTime @default(now())

  document Document @relation(fields: [documentId], references: [id], onDelete: Cascade)

  @@index([documentId, generation, seq])
}

model Session {
  id        String    @id @default(cuid())
  userId    String
  jti       String    @unique
  expiresAt DateTime
  revokedAt DateTime?
  createdAt DateTime  @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model PasswordResetToken {
  id        String    @id @default(cuid())
  userId    String
  tokenHash String    @unique
  expiresAt DateTime
  usedAt    DateTime?
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model EmailVerificationToken {
  id        String    @id @default(cuid())
  userId    String
  tokenHash String    @unique
  expiresAt DateTime
  usedAt    DateTime?
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}
